--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-concat": "^2.6.1",
+    "gulp-gm": "^0.0.9",
+    "gulp-image-resize": "^0.13.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-livereload": "^4.0.2",
     "gulp-rename": "^2.0.0",
